# MemoryForge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
config/: settings.yaml
docs/: api.md  architecture.md  configuration.md  index.html  quickstart.md
docs/assets/css/: style.css
docs/assets/js/: main.js
memoryforge/: __init__.py  cli.py  config.py  conversation.py  exceptions.py
memoryforge/analysis/: __init__.py  extractor.py  python_analyzer.py
memoryforge/analytics/: __init__.py  analyzer.py
memoryforge/api/: __init__.py  app.py  auth.py  ratelimit.py  websocket.py
memoryforge/backup/: __init__.py  manager.py
memoryforge/compression/: __init__.py  pipeline.py  strategies.py
memoryforge/context/: __init__.py  builder.py
memoryforge/core/: __init__.py  base.py  types.py
memoryforge/deduplication/: __init__.py  detector.py  merger.py
memoryforge/evaluation/: __init__.py  metrics.py
memoryforge/export/: __init__.py  formats.py
memoryforge/hooks/: __init__.py  events.py
memoryforge/llm/: __init__.py  embedder.py  summarizer.py
memoryforge/memory/: __init__.py  batch.py  manager.py
memoryforge/memory/episodic/: __init__.py  memory.py
memoryforge/memory/semantic/: __init__.py  memory.py
memoryforge/memory/working/: __init__.py  memory.py
memoryforge/monitoring/: __init__.py  health.py  metrics.py
memoryforge/retrieval/: __init__.py  cache.py  router.py  semantic.py
memoryforge/scheduler/: __init__.py  consolidation.py
memoryforge/scoring/: __init__.py  importance.py
memoryforge/session/: __init__.py  manager.py
memoryforge/storage/: __init__.py  neo4j.py  qdrant.py  sqlite.py
memoryforge/summarization/: __init__.py  strategies.py  summarizer.py
memoryforge/tagging/: __init__.py  auto_tagger.py  extractors.py
memoryforge/utils/: __init__.py  tokens.py
memoryforge/versioning/: __init__.py  history.py
scripts/: benchmark.py  demo_conversation.py  example_usage.py  run_api.py  test_conversation.py  test_llm_integration.py  test_scoring.py
tests/: __init__.py
tests/integration/: __init__.py  test_api.py  test_memory_layers.py
tests/unit/: __init__.py  test_analytics.py  test_auth.py  test_backup.py  test_code_analyzer.py  test_compression.py  test_context_builder.py  test_deduplication.py  test_exceptions.py  test_hooks.py  test_memory_manager.py  test_monitoring.py  test_retrieval.py  test_session.py  test_storage_sqlite.py  test_summarization.py  test_tagging.py  test_working_memory.py
